# libxmlplusplus

./: .gitignore  AUTHORS  COPYING  ChangeLog  ChangeLog.pre-2-36-0  Makefile.am  NEWS  README  README.md  configure.ac  configure.in  libxml++-1.0.pc.in  libxml++-2.6.pc.in  libxml++.doap  libxml++.pc.in  libxml++config.h.in  libxml++config.h.meson  libxmlplusplus.doap  meson.build  meson_options.txt  mingw-cross-file.txt
.github/workflows/: autotools-clang-10.yml  autotools-clang-5.yml  autotools-clang-6.yml  autotools-clang-7.yml  autotools-clang-8.yml  autotools-clang-9.yml  autotools-clang.yml  autotools-gcc-7.yml  autotools-gcc-8.yml  autotools-gcc-9.yml  autotools-gcc.yml  meson-clang-10.yml  meson-clang.yml  meson-gcc-10.yml  meson-gcc.yml  meson-msvc.yml  meson-windows-2022.yml  publish-docs.yml
MSVC_NMake/: MSVC-Builds.md  Makefile.vc  README  build-rules-msvc.mak  config-msvc.mak  create-lists-msvc.mak  detectenv-msvc.mak  filelist.am  generate-msvc.mak  info-msvc.mak  install.mak
MSVC_NMake/gendef/: gendef.cc
MSVC_NMake/libxml++/: libxml++.rc.in  meson.build
docs/: Makefile.am  _config.yml  index.html  index.md  style.css
docs/_layouts/: default.html
docs/manual/: insert_example_code.pl  insert_example_code.py  libxml++_without_code.xml  meson.build
docs/reference/: Doxyfile.in  meson.build
examples/: Makefile.am  README  meson.build  testutilities.cc  testutilities.h
examples/dom_build/: main.cc
examples/dom_parse_entities/: example.xml  main.cc
examples/dom_parser/: main.cc
examples/dom_parser_raw/: main.cc
examples/dom_read_write/: example.dtd  example.xml  main.cc
examples/dom_update_namespace/: example1.xml  example2.xml  main.cc
examples/dom_xinclude/: example.xml  include1.txt  include2.xml  main.cc
examples/dom_xinclude/xinclude/: include1.txt  include2.xml
examples/dom_xpath/: example.xml  main.cc
examples/dtdvalidation/: main.cc
examples/import_node/: example1.xml  example2.xml  main.cc
examples/sax_exception/: main.cc  myparser.cc  myparser.h
examples/sax_parser/: main.cc  myparser.cc  myparser.h
examples/sax_parser_build_dom/: main.cc  svgdocument.cc  svgdocument.h  svgelement.cc  svgelement.h  svggroup.h  svgparser.cc  svgparser.h  svgpath.h
examples/sax_parser_entities/: example.xml  main.cc  myparser.cc  myparser.h
examples/schemavalidation/: example.rng  main.cc
examples/textreader/: main.cc
libxml++/: Makefile.am  api_export.h  attribute.cc  attribute.h  attributedeclaration.cc  attributedeclaration.h  attributenode.cc  attributenode.h  document.cc  document.h  dtd.cc  dtd.h  filelist.am  keepblanks.cc  keepblanks.h  libxml++.h  meson.build  noncopyable.cc  noncopyable.h  relaxngschema.cc  relaxngschema.h  schema.cc  schema.h  schemabase.cc  schemabase.h  ustring.h  xsdschema.cc  xsdschema.h
libxml++/exceptions/: exception.cc  exception.h  internal_error.cc  internal_error.h  parse_error.cc  parse_error.h  validity_error.cc  validity_error.h  wrapped_exception.cc  wrapped_exception.h
libxml++/io/: istreamparserinputbuffer.cc  istreamparserinputbuffer.h  ostreamoutputbuffer.cc  ostreamoutputbuffer.h  outputbuffer.cc  outputbuffer.h  parserinputbuffer.cc  parserinputbuffer.h
libxml++/nodes/: cdatanode.cc  cdatanode.h  commentnode.cc  commentnode.h  contentnode.cc  contentnode.h  element.cc  element.h  entitydeclaration.cc  entitydeclaration.h  entityreference.cc  entityreference.h  node.cc  node.h  processinginstructionnode.cc  processinginstructionnode.h  textnode.cc  textnode.h  xincludeend.cc  xincludeend.h  xincludestart.cc  xincludestart.h
libxml++/parsers/: domparser.cc  domparser.h  parser.cc  parser.h  saxparser.cc  saxparser.h  textreader.cc  textreader.h
libxml++/validators/: dtdvalidator.cc  dtdvalidator.h  relaxngvalidator.cc  relaxngvalidator.h  schemavalidator.cc  schemavalidator.h  schemavalidatorbase.cc  schemavalidatorbase.h  validator.cc  validator.h  xsdvalidator.cc  xsdvalidator.h
subprojects/: libxml2.wrap  libxml2_cmake.wrap
tests/: Makefile.am  meson.build
tests/istream_ioparser/: main.cc
tests/saxparser_chunk_parsing_inconsistent_state/: main.cc
tests/saxparser_parse_double_free/: main.cc
tests/saxparser_parse_stream_inconsistent_state/: main.cc
tools/build_scripts/: tutorial-custom-cmd.py
tools/conf_tests/: have_exception_ptr.cc
tools/test_scripts/: testheaders.sh  testmmh.sh
untracked/: README
win32_bcc/: defaultmake.inc  libxmlpp_generic.mak  makefile  readme.txt
